Fixed font-weight, added letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
   line-height: 1.3;
   text-decoration: none;
   color: #212121;
+  letter-spacing: 0.03em;
 }
 
 .logo span {
@@ -28,8 +29,9 @@ body {
   list-style-type: none;
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.1;
+  line-height: 1.14;
   cursor: pointer;
+  letter-spacing: 0.02em;
 }
 
 .navigation-list-link:hover,
@@ -57,6 +59,7 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.3;
+  letter-spacing: 0.06em;
 }
 
 .hero-button {
@@ -70,6 +73,7 @@ body {
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  letter-spacing: 0.06em;
 }
 
 .advantages-list-item,
@@ -81,22 +85,26 @@ body {
 
 .advantages-list-title {
   color: var(--black);
-  font-weight: 500;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
 }
 
 .advantages-list-description {
   color: var(--gray);
   font-size: 14px;
   line-height: 1.7;
+  letter-spacing: 0.03em;
+  font-weight: 400;
 }
 
 .services-title,
 .team-title {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
+  letter-spacing: 0.03em;
 }
 
 .team {
@@ -108,10 +116,16 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
+  letter-spacing: 0.03em;
 }
 
 .team-list-text {
   color: var(--gray);
+  font-weight: 400;
+}
+
+.footer-contacts-list {
+  font-style: normal;
 }
 
 .footer-contacts-list-link {
@@ -129,6 +143,7 @@ body {
 .footer-contacts-list-item {
   font-size: 14px;
   line-height: 1.7;
+  letter-spacing: 0.03em;
 }
 
 .footer-contacts-list-link {
@@ -161,6 +176,7 @@ body {
   border: none;
   height: 26px;
   cursor: pointer;
+  letter-spacing: 0.03em;
 }
 
 .filter-btn:hover,
@@ -178,13 +194,16 @@ body {
 }
 
 .portfolio-list-title {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
 }
 
 .portfolio-list-text {
   font-size: 16px;
   line-height: 1.8;
   color: var(--gray);
+  font-weight: 400;
+  letter-spacing: 0.03em;
 }
